@@ -1,6 +1,7 @@
 cm4all-beng-proxy (0.6.3) unstable; urgency=low
 
   * http-server: implemented the DELETE method
+  * proxy-handler: send request body to template when no widget is focused
 
  --
 
